test/fail/cyclic-bound1.mo
/* check cyclic bounds are rejected, would loop sans check */

func f<A <: A>(a : A)
{
  let _ : () = a;
};

